--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,54 @@
 .nrepl-port
-.shadow-cljs/
-node_modules/
 package-lock.json
 resources/public/js
+
+.lsp
+pgdata
+target
+resources/ui
+logdata
+esdata
+parsers/*.class
+tmp/*
+box/deploy/master/cluster.yaml
+pgdata2
+test-temp-zrc/*
+.clj-kondo/.cache
+.shadow-cljs
+shadow-target
+.grafana
+.esdata
+.eastwood
+aidbox-sbom.json
+aidbox-sbom.xml
+local.sql
+
+/resources/VERSION
+/resources/COMMIT
+/resources/CHANNEL
+docker-build/*jar
+docker-build/aidbox-projects
+parsers-java
+antlr
+.deploy
+resources/aidbox-commit
+resources/aidbox-timestamp
+resources/zen-fhir-version
+resources/license/private-keys
+.libox-target
+.jars
+/node_modules
+/smartbox/docs/.env
+
+testzrc/fhir-modules-box/package-lock.json
+test/box/zenbox/project/zen-modules/*
+.prometheus_data/
+/synthea-with-dependencies.jar
+/audit/perf-datasets/
+
+/.idea/
+.local-env
+pgdata-replica
+async-profiler
+
+aidbox-projects/hl7.fhir.us.core-3.1.1.zip
