--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,6 @@
 version: '3'
+volumes:
+  pgdata:
 
 services:
   db:
@@ -7,7 +9,7 @@ services:
     ports:
       - "5444:5432"
     volumes:
-      - "./pgdata:/var/lib/postgresql/data"
+      - "pgdata:/var/lib/postgresql/data"
     environment:
       POSTGRES_USER: course
       POSTGRES_PASSWORD: password
